adding sample code for iron route

--- a/YWCA.html
+++ b/YWCA.html
@@ -1,14 +1,15 @@
-<head>
-  <title>YWCA</title>
-</head>
+<template name="home">
+	<h1> This is Main Page</h1>
+</template>
 
-<body>
-  <h1>Welcome to Meteor!</h1>
+<template name="post1">
+	<h1> My First Post</h1>
+</template>
 
-  {{> hello}}
-</body>
+<template name="post2">
+	<h1> My Second Post</h1>
+</template>
 
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
+<template name="post">
+	Sample Posts
 </template>
