you can now pull individual post

--- a/YWCA.html
+++ b/YWCA.html
@@ -10,8 +10,10 @@
 	<h1> My Second Post</h1>
 </template>
 
-<template name="post">
-	Sample Posts
+<template name="Post">
+	question: {{question}} <br />
+	answer: {{answer}} <br />
+	picture: {{picture}} <br />
 </template>
 
 <head>
