you can now query for program and it will list all the data in that program

--- a/YWCA.html
+++ b/YWCA.html
@@ -11,9 +11,14 @@
 </template>
 
 <template name="Post">
-	question: {{question}} <br />
-	answer: {{answer}} <br />
-	picture: {{picture}} <br />
+	{{#each posts}}
+		question: {{question}}
+		<br />
+		answer: {{answer}}
+		<br />
+		picture: {{picture}}
+		<br />
+	{{/each}}
 </template>
 
 <head>
