changed html so it will embed img

--- a/YWCA.html
+++ b/YWCA.html
@@ -16,7 +16,7 @@
 		<br />
 		answer: {{answer}}
 		<br />
-		picture: {{picture}}
+		<img src="data:image/png;base64,{{picture}}"/>
 		<br />
 	{{/each}}
 </template>
