--- a/YWCA.html
+++ b/YWCA.html
@@ -21,6 +21,13 @@
 	{{/each}}
 </template>
 
+<template name="addNewPost">
+	<form name="new-post">
+		<input type="file" accept="image/*" />
+		<input type="submit" />
+	</form>
+</template>
+
 <head>
   <title>YWCA</title>
 </head>
