--- a/YWCA.html
+++ b/YWCA.html
@@ -35,6 +35,10 @@
 
 <head>
   <title>YWCA</title>
+    <meta property="og:url" content="http://ywca.meteor.com/post/10" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="YWCA" />
+    <meta property="og:description" content="A place for volunteers to share their testimonials" />
 </head>
 
 <body>
@@ -58,5 +62,22 @@
       Welcome to my life
     </div>
   </div>
+
+    <!-- Load Facebook SDK for JavaScript -->
+    <div id="fb-root"></div>
+    <script>
+(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
+
+    <!-- Your share button code -->
+    <div class="fb-share-button"
+         data-href="http://ywca.meteor.com/post/10"
+         data-layout="button_count">
+    </div>
 
 </body>
