fixed facebook share button

--- a/YWCA.html
+++ b/YWCA.html
@@ -20,6 +20,15 @@
 		<img src="{{picture}}" />
 		<br />
 	{{/each}}
+    {{> facebookshare}}
+</template>
+
+<template name="facebookshare">
+    <!-- Your share button code -->
+    <div class="fb-share-button"
+         data-href="http://ywca.meteor.com/post/10"
+         data-layout="button_count">
+    </div>
 </template>
 
 <template name="uploadFileForm">
@@ -62,22 +71,4 @@
       Welcome to my life
     </div>
   </div>
-
-    <!-- Load Facebook SDK for JavaScript -->
-    <div id="fb-root"></div>
-    <script>
-(function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1";
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));</script>
-
-    <!-- Your share button code -->
-    <div class="fb-share-button"
-         data-href="http://ywca.meteor.com/post/10"
-         data-layout="button_count">
-    </div>
-
 </body>
