--- a/YWCA.html
+++ b/YWCA.html
@@ -1,5 +1,14 @@
+
+<head>
+  <title>YWCA</title>
+</head>
+
 <template name="home">
-	<h1> This is Main Page</h1>
+	<ul class="nav nav-tabs">
+    <li><a href="/post/0">Boys 4 Real</a></li>
+    <li><a href="/post/1">That's Just Me</a></li>
+    <li><a href="/post/2">Welcome to MyLife</a></li>
+  </ul>
 </template>
 
 <template name="post1">
@@ -11,73 +20,49 @@
 </template>
 
 <template name="Post">
-	{{> uploadFileForm}}
-	{{#each posts}}
-		question: {{question}}
-		<br />
-		answer: {{answer}}
-		<br />
-		<img src="{{picture}}" />
-		<br />
-	{{/each}}
+	{{> home}}
+	<div class="container">
+		{{> uploadFileForm}}
+		{{#each posts}}
+			<div class="tile-container pull-left">
+				<div class="spaced">{{volunteer_id}}</div>
+
+				<div class="spaced">{{question}}</div>
+				<div class="spaced"><img src="{{picture}}" /></div>
+				<div class="spaced">{{answer}}</div>
+			</div>
+		{{/each}}
+	</div>
 </template>
 
 <template name="uploadFileForm">
-	<form class="new-post">
-		program: <input type="text" id="program"/> <br />
-		volunteer_id: <input type="text" id="volunteer_id"/> <br />
-		question: <input type="text" id="question"/> <br />
-		answer: <input type="text" id="answer" /> <br />
-		<input type="file" accept="image/*"  id="files" />
-		<input type="submit" />
-	</form>
+	<div class="tile-container pull-left">
+		<form class="new-post">
+			<div class="form-group">
+				<select id="program" class="form-control">
+					<option value="0">Boys 4 Real</option>
+					<option value="1">That's Just Me</option>
+					<option value="2">Welcome to my Life</option>
+				</select>
+			</div>
+
+			<div class="form-group">
+				<input type="text" id="volunteer_id" placeholder="volunteer name"/>
+			</div>
+
+			<div class="form-group">
+				<input type="text" id="question" placeholder="question"/>
+			</div>
+
+			<div class="form-group">
+				<input type="text" id="answer" placeholder="answer"/>
+			</div>
+
+			<div class="form-group">
+				<input type="file" accept="image/*"  id="files" />
+			</div>
+
+			<input class="btn btn-default" type="submit" />
+		</form>
+	</div>
 </template>
-
-<head>
-  <title>YWCA</title>
-    <meta property="og:url" content="http://ywca.meteor.com/post/10" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="YWCA" />
-    <meta property="og:description" content="A place for volunteers to share their testimonials" />
-</head>
-
-<body>
-  <ul class="nav nav-tabs">
-    <li><a href="#boys-4-real">Boys 4 Real</a></li>
-    <li><a href="#thats-just-me">That's Just Me</a></li>
-    <li><a href="#welcome-to-my-life">Welcome to MyLife</a></li>
-  </ul>
-
-
-  <div class="tab-content">
-    <div id="boys-4-real" class="tab-pane active">
-      Boys 4 real
-    </div>
-
-    <div id="thats-just-me" class="tab-pane">
-      That's just me
-    </div>
-
-    <div id="welcome-to-my-life" class="tab-pane">
-      Welcome to my life
-    </div>
-  </div>
-
-    <!-- Load Facebook SDK for JavaScript -->
-    <div id="fb-root"></div>
-    <script>
-(function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1";
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));</script>
-
-    <!-- Your share button code -->
-    <div class="fb-share-button"
-         data-href="http://ywca.meteor.com/post/10"
-         data-layout="button_count">
-    </div>
-
-</body>
